--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="vendors/bootstrap-colorpicker.min.css" />
+    <!-- <link rel="stylesheet" href="vendors/bootstrap-colorpicker.min.css" /> -->
 
     <link rel="stylesheet" href="styles/main.css">
   </head>
