--- a/app/index.html
+++ b/app/index.html
@@ -296,66 +296,75 @@
                     <a data-toggle="collapse" data-parent="#acc-axis" href="#acc-axis-body">坐标轴</a>
                   </h4>
                 </div>
-                <div id="acc-axis-body" class="panel-collapse collapse">
+                <div id="acc-axis-body" class="panel-collapse collapse in">
                   <div class="panel-body">
                     <form class="form-horizontal">
                       <div class="form-group">
-                        <div class="col-sm-3">
-                          <input type="checkbox" v-model="theme.axisLineShow" v-on:change="updateCharts()" id="axisLineShow" />
-                          <label for="axisLineShow" class="control-label" title="axisLine">轴线</label>
-                        </div>
-                        <div class="col-sm-9">
-                          <div class="input-group colorpicker-component">
-                            <input type="text" v-model="theme.axisLineColor" class="form-control" />
-                            <span class="input-group-addon"><i></i></span>
-                          </div>
+                        <div class="col-sm-12">
+                          <input v-model="theme.axisSeperateSetting" @change="axisSeperateSettingChanges()" type="checkbox" id="axisSeperateSetting" />
+                          <label for="axisSeperateSetting" class="control-label">为不同类型坐标轴分别设置</label>
                         </div>
                       </div>
-                      <div class="form-group">
-                        <div class="col-sm-3">
-                          <input type="checkbox" v-model="theme.axisTickShow" v-on:change="updateCharts()" id="axisTickShow" />
-                          <label for="axisTickShow" class="control-label" title="axisTick">刻度</label>
-                        </div>
-                        <div class="col-sm-9">
-                          <div class="input-group colorpicker-component">
-                            <input type="text" v-model="theme.axisTickColor" class="form-control" />
-                            <span class="input-group-addon"><i></i></span>
+                      <div v-for="axis in theme.axis" v-if="$index > 0 || !theme.axisSeperateSetting">
+                        <h5 v-if="axis.type !== 'all'">{{ axis.name }}</h5>
+                        <div class="form-group">
+                          <div class="col-sm-3">
+                            <input type="checkbox" v-model="axis.axisLineShow" v-on:change="updateCharts()" id="axisLineShow" />
+                            <label for="axisLineShow" class="control-label" title="axisLine">轴线</label>
+                          </div>
+                          <div class="col-sm-9">
+                            <div class="input-group colorpicker-component">
+                              <input type="text" v-model="axis.axisLineColor" class="form-control" />
+                              <span class="input-group-addon"><i></i></span>
+                            </div>
                           </div>
                         </div>
-                      </div>
-                      <div class="form-group">
-                        <div class="col-sm-3">
-                          <input type="checkbox" v-model="theme.splitLineShow" v-on:change="updateCharts()" id="splitLineShow" />
-                          <label for="splitLineShow" class="control-label" title="splitLine">网格</label>
-                        </div>
-                        <div class="col-sm-9">
-                          <div class="input-group colorpicker-component">
-                            <input type="text" v-model="theme.splitLineColor" class="form-control" />
-                            <span class="input-group-addon"><i></i></span>
+                        <div class="form-group">
+                          <div class="col-sm-3">
+                            <input type="checkbox" v-model="axis.axisTickShow" v-on:change="updateCharts()" id="axisTickShow" />
+                            <label for="axisTickShow" class="control-label" title="axisTick">刻度</label>
+                          </div>
+                          <div class="col-sm-9">
+                            <div class="input-group colorpicker-component">
+                              <input type="text" v-model="axis.axisTickColor" class="form-control" />
+                              <span class="input-group-addon"><i></i></span>
+                            </div>
                           </div>
                         </div>
-                      </div>
-                      <div class="form-group">
-                        <div class="col-sm-3">
-                          <input type="checkbox" v-model="theme.splitAreaShow" v-on:change="updateCharts()" id="splitAreaShow" />
-                          <label for="splitAreaShow" class="control-label" title="splitArea">填充</label>
-                        </div>
-                        <div class="col-sm-9">
-                          <div class="input-group colorpicker-component">
-                            <input type="text" v-model="theme.splitAreaColor" class="form-control" />
-                            <span class="input-group-addon"><i></i></span>
+                        <div class="form-group">
+                          <div class="col-sm-3">
+                            <input type="checkbox" v-model="axis.splitLineShow" v-on:change="updateCharts()" id="splitLineShow" />
+                            <label for="splitLineShow" class="control-label" title="splitLine">网格</label>
+                          </div>
+                          <div class="col-sm-9">
+                            <div class="input-group colorpicker-component">
+                              <input type="text" v-model="axis.splitLineColor" class="form-control" />
+                              <span class="input-group-addon"><i></i></span>
+                            </div>
                           </div>
                         </div>
-                      </div>
-                      <div class="form-group">
-                        <div class="col-sm-3">
-                          <input type="checkbox" v-model="theme.axisLabelShow" v-on:change="updateCharts()" id="axisLabelShow" />
-                          <label for="axisLabelShow" class="control-label">文字</label>
+                        <div class="form-group">
+                          <div class="col-sm-3">
+                            <input type="checkbox" v-model="axis.splitAreaShow" v-on:change="updateCharts()" id="splitAreaShow" />
+                            <label for="splitAreaShow" class="control-label" title="splitArea">填充</label>
+                          </div>
+                          <div class="col-sm-9">
+                            <div class="input-group colorpicker-component">
+                              <input type="text" v-model="axis.splitAreaColor" class="form-control" />
+                              <span class="input-group-addon"><i></i></span>
+                            </div>
+                          </div>
                         </div>
-                        <div class="col-sm-9">
-                          <div class="input-group colorpicker-component">
-                            <input type="text" v-model="theme.axisLabelColor" class="form-control" />
-                            <span class="input-group-addon"><i></i></span>
+                        <div class="form-group">
+                          <div class="col-sm-3">
+                            <input type="checkbox" v-model="axis.axisLabelShow" v-on:change="updateCharts()" id="axisLabelShow" />
+                            <label for="axisLabelShow" class="control-label">文字</label>
+                          </div>
+                          <div class="col-sm-9">
+                            <div class="input-group colorpicker-component">
+                              <input type="text" v-model="axis.axisLabelColor" class="form-control" />
+                              <span class="input-group-addon"><i></i></span>
+                            </div>
                           </div>
                         </div>
                       </div>
