--- a/app/index.html
+++ b/app/index.html
@@ -56,12 +56,12 @@
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#acc-port" href="#acc-port-body">导入导出</a>
+                    <a data-toggle="collapse" data-parent="#acc-port" href="#acc-port-body">功能</a>
                   </h4>
                 </div>
                 <div id="acc-port-body" class="panel-collapse collapse in">
                   <div class="panel-body">
-                    <form class="form">
+                    <div class="port-row">
                       <input type="file" @change="importFileChanged" id="input-file" style="display: none" />
                       <a class="btn btn-primary" @click="useTheme()">生成主题</a>
                       <a class="btn btn-default" @click="importJson()">导入</a>
@@ -69,10 +69,20 @@
                       <a data-toggle="modal" data-target="#download-modal">
                         <span class="glyphicon glyphicon-question-sign"></span>
                       </a>
-                    </form>
-                    <form class="form">
+                    </div>
+                    <div class="port-row">
                       <a class="btn btn-default" @click="updateCharts(true)">刷新</a>
                       <a class="btn btn-default" @click="newTheme()">复原</a>
+                    </div>
+                    <form class="form form-horizontal">
+                      <div class="form-group">
+                      </div>
+                      <div class="form-group">
+                        <label class="col-sm-3 control-label">系列数量</label>
+                        <div class="col-sm-9">
+                          <input @change="seriesCntChanges()" type="number" class="form-control" v-model="theme.seriesCnt" />
+                        </div>
+                      </div>
                     </form>
                   </div>
                 </div>
