update for pages

--- a/app/index.html
+++ b/app/index.html
@@ -508,7 +508,7 @@
     <script src="vendors/bootstrap.min.js"></script>
     <script src="vendors/bootstrap-colorpicker.min.js"></script>
     <script src="vendors/vue.min.js"></script>
-    <script src="vendors/echarts.js"></script>
+    <script src="vendors/echarts.min.js"></script>
 
     <script src="scripts/options.js"></script>
     <script src="scripts/main.js"></script>
