--- a/app/index.html
+++ b/app/index.html
@@ -76,8 +76,6 @@
                     </div>
                     <form class="form form-horizontal">
                       <div class="form-group">
-                      </div>
-                      <div class="form-group">
                         <label class="col-sm-3 control-label">系列数量</label>
                         <div class="col-sm-9">
                           <input @change="seriesCntChanges()" type="number" class="form-control" v-model="theme.seriesCnt" />
@@ -136,7 +134,7 @@
                         </div>
                       </div>
                       <div class="form-group">
-                        <label class="col-sm-3 control-label">标记文字</label>
+                        <label class="col-sm-3 control-label">标签文字</label>
                         <div class="col-sm-9">
                           <div class="input-group colorpicker-component">
                             <input type="text" v-model="theme.markTextColor" class="form-control" />
