remove attr for echarts, use data instead

--- a/app/index.html
+++ b/app/index.html
@@ -460,8 +460,8 @@
 
           <div class="col-md-9 col-sm-8 chart-container">
             <div class="row">
-              <div v-for="chart in charts" class="ec-container col-md-6">
-                <div class="ec-panel" ec-option="{{ chart.option }}"></div>
+              <div v-for="i in [1,2,3,4,5,6,7,8]" class="ec-container col-md-6">
+                <div class="ec-panel"></div>
               </div>
             </div>
           </div><!-- end of chart panel -->
