heatmap and treemap

--- a/app/index.html
+++ b/app/index.html
@@ -498,7 +498,7 @@
                     <a data-toggle="collapse" data-parent="#acc-map" href="#acc-map-body" title="map">地图</a>
                   </h4>
                 </div>
-                <div id="acc-graph-body" class="panel-collapse collapse in">
+                <div id="acc-map-body" class="panel-collapse collapse">
                   <div class="panel-body">
                     <form class="form-horizontal">
                       <h5>默认状态</h5>
@@ -587,7 +587,7 @@
 
           <div class="col-md-9 col-sm-8 chart-container">
             <div class="row">
-              <div v-for="i in [1,2,3,4,5,6,7,8,9,10,11,12]" class="ec-container col-md-6">
+              <div v-for="i in [1,2,3,4,5,6,7,8,9,10,11,12,13,14]" class="ec-container col-md-6">
                 <div class="ec-panel"></div>
               </div>
             </div>
@@ -633,7 +633,7 @@
     <script src="vendors/bootstrap.min.js"></script>
     <script src="vendors/bootstrap-colorpicker.min.js"></script>
     <script src="vendors/vue.min.js"></script>
-    <script src="vendors/echarts.js"></script>
+    <script src="vendors/echarts.min.js"></script>
     <script src="http://echarts.baidu.com/gallery/vendors/echarts/map/js/china.js"></script>
 
     <script src="scripts/options.js"></script>
